# Text-to-Garmin

./: .dockerignore  .gitignore  Dockerfile  README.md  azure.yaml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: ActivityIndicator.tsx  ClarificationPrompt.tsx  CredentialsModal.tsx  DescriptionForm.tsx  FlowLog.tsx  LoginScreen.tsx  RecentWorkouts.tsx  RevisionForm.tsx  SetupScreen.tsx  StatusBanner.tsx  WorkoutPreview.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  select.tsx  textarea.tsx
infra/: main.bicep  main.parameters.json
src/text_to_garmin/: __init__.py  auth.py  builder.py  cli.py  draft_store.py  models.py  parser.py  setup_store.py  uploader.py  web_auth.py  web_schemas.py  webapi.py
tests/: test_auth.py  test_parser_response.py  test_parser_session.py  test_rest_step_regression.py  test_uploader.py  test_webapi.py
